@startuml

package "Model Layer" {

  abstract class User <<serializable>> {
    - static count : Int
    - userId : String
    - logininfo : LoginInfo
    - realName : String
    - position : String
    - itUser : Boolean
    - conversationIDs : ArrayList<String> 
    - unreadConversationIDs : Unordered, Unique<String>
    + User()
    + User(username : String, password : String)
    + getters and setters for all values (various)
  }

  class LoginInfo <<serializable>>{
    - username : String
    - password : String
    + LoginInfo(un : String, pw : String)
    + getUsername() : String
    + getPassword() : String
    + Equals(other : LoginInfo) : Boolean
}


  abstract class Conversation {
    - conversationId : String
    - participants : List<User>
    - messages : List<Message>
    - createdAt : Instant
    - mostRecentMessage : Instant 
    + addMessage(m: Message) : void
    + getMessages(n: int) : List<Message>
    + getParticipants() : List<User>
  }

  class GroupChat {
    - groupName : String
    - creator : User
    + GroupChat(base : Conversation)
    + addParticipant(u: User) : void
    + removeParticipant(u: User) : void
 + setName(n : String) 
+ getName() : String
  }

  class Message <<immutable>> <<serializable>> {
    - text : String
    - timestamp : Instant
    - senderID : String
    + Message(t : String, s : String)
    + getText() : String
    + getTimestamp() : Instant
    + getSenderID() : String
  }

class Wrapper <<immutabke>> <<serializable>>{
  - payload : Object
  - requestType : RequestType
  - responseType : ResponseType
  + Wrapper(payload : Object, type : ResponseType)
+ Wrapper(payload : Object, type : RequestType)
+ getPayload() : Object
+ getResponseType() : ResposeType
+ getRequestType() : RequestType
}

enum RequestType {
LOGIN
    LOGOUT
    REGISTER
    GET_USER_INFO
    SEND_MESSAGE
    ADD_PARTICIPANT
    REMOVE_PARTICIPANT
    CREATE_CONVERSATION
    CREATE_GROUP_CONVERSATION
    GET_CONVERSATION
    UPDATE_ACTIVE_CONVERSATION
    UPDATE_USER_INFO
    CHANGE_GROUP_NAME
    QUERY_CONVERSATION_LOG_BY_USER
    QUERY_CONVERSATION_LOG_BY_ID
    SEARCH_SIMILAR_USERS
    QUERY_CONVERSATION_LOG
  REQUEST_CONVERSATION_LOG
REGISTER_IT
}

enum ReponseType{
LOGIN_SUCCESS
LOGIN_FAIL
    LOGOUT_SUCCESS
LOGOUT_FAIL
    REGISTER_USER_SUCCESS
REGISTER_USER_FAIL
    USER_INFO_SENT
USER_INFO_NOT_SENT
    MESSAGE_SENT
MESSAGE_NOT_SENT
    SENDING_MESSAGE
    ADD_PARTICIPANT_SUCCESS
ADD_PARTICIPANT_FAIL
    REMOVE_PARTICIPANT_SUCCESS
REMOVE_PARTICIPANT_FAIL
    GROUP_CREATION_SUCCESS
GROUP_CREATION_FAIL
    CREATE_CONVERSATION_SUCCESS
CREATE_CONVERSATION_FAIL
    CONVERSATION_SENT
CONVERSATION_NOT_SENT
    ACTIVE_CONVERSATION_UPDATED
    SENDING_CONVERSATIONS
    SENDING_ACTIVE_USERS
    UPDATED_USER_RECEIVED
UPDATED_USER_NOT_RECEIVED
    USER_LOGGED_IN
USER_LOGGED_OUT
    PARTICIPANT_ADDED
PARTICIPANT_REMOVED
    GROUP_NAME_CHANGED
    CONVERSATION_LOG_QUERY_RESULT

    LIST_OF_USERS_SIMILAR 
CONVERSATION_LOG_NOT_SENT
CONVERSATION_LOG_SENT
}

  class Report {
    - resolved : Boolean
+ getResolved() : Boolean
+ resolve() 
  }

Conversation <|-- GroupChat
Message <|-- Report
User "1" *-- "1" LoginInfo
Conversation "1" *-- "*" Message
}
@enduml
